2026-02 Feature Update for worksbynrfz

--- a/rail-buddy/networks/ewl.html
+++ b/rail-buddy/networks/ewl.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>North-South Line | RailBuddy</title>
+    <title>East-West Line | RailBuddy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/aNQTQtO.png" />
@@ -147,7 +147,7 @@
         top: -23px;
         bottom: 22px;
         width: 3px;
-        background: #c41e3a;
+        background: #009645;
         z-index: 1;
     }
 
@@ -167,7 +167,7 @@
     }
 
     .show-more-button button {
-        background: #ff3b3b;
+        background: #009645;
         color: #fff;
         border: none;
         padding: 10px 20px;
@@ -180,7 +180,7 @@
     }
 
     .show-more-button button:hover {
-        background: #a01729;
+        background: #025328;
     }
 
     .line-controls {
@@ -225,7 +225,7 @@
         top: 22px;
         bottom: 22px;
         width: 3px;
-        background: #c41e3a;
+        background: #009645;
         z-index: 1;
     }
 
@@ -242,7 +242,7 @@
         height: 18px;
         border-radius: 50%;
         background: #fff;
-        border: 3px solid #c41e3a;
+        border: 3px solid #009645;
         position: absolute;
         left: -31px;
         z-index: 10;
@@ -265,7 +265,7 @@
     }
 
     .station-code {
-        background: #ff3b3b;
+        background: #009645;
         color: #fff;
         font-weight: bold;
         border-radius: 13.6px / 19.2px;
@@ -323,7 +323,7 @@
         transform: translateY(-50%);
         width: 10px;
         height: 10px;
-        background: #ff3b3b;
+        background: #009645;
         border-radius: 2px;
         z-index: -1;
     }
@@ -564,8 +564,8 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="filter-title" id="chimes"><img src="../assets/caplets/NSLCap.png" alt="NSL"
-                                            class="caplet"> North-South Line</h1></a>
+                                    <h1 class="filter-title" id="chimes"><img src="../assets/caplets/EWLCap.png"
+                                            alt="EWL" class="caplet"> East-West Line</h1></a>
                                 </div>
                             </div>
                         </div>
@@ -576,15 +576,15 @@
         </div>
     </section>
 
-            <!-- Audio Elements -->
-        <audio id="chimes-audio">
-          <source src="../assets/chimes/NSL_Chime A_V2.wav" type="audio/wav">
-          Your browser does not support the audio element.
-        </audio>
-        <audio id="chimes-alt">
-          <source src="../assets/chimes/NSL_Chime B_V2.wav" type="audio/wav">
-          Your browser does not support the audio element.
-        </audio>
+    <!-- Audio Elements -->
+    <audio id="chimes-audio">
+        <source src="../assets/chimes/EWL_Chime A_V2.wav" type="audio/wav">
+        Your browser does not support the audio element.
+    </audio>
+    <audio id="chimes-alt">
+        <source src="../assets/chimes/EWL_Chime B_V2.wav" type="audio/wav">
+        Your browser does not support the audio element.
+    </audio>
 
     <!-- Details/Contents Section -->
     <section class="about-me-summ clearfix">
@@ -601,7 +601,7 @@
                                         <i class="fa-solid fa-calendar"></i>
                                     </div>
                                     <h3 style="font-size: 18px; font-weight: bolder;">Opened</h3>
-                                    <h4 style="font-size: 13px;">7 November 1987<br>(in Phases)</h4>
+                                    <h4 style="font-size: 13px;">12 December 1987<br>(in Phases)</h4>
                                 </div>
                             </div>
 
@@ -611,7 +611,7 @@
                                         <i class="fa-regular fa-ruler-horizontal"></i>
                                     </div>
                                     <h3 style="font-size: 18px; font-weight: bolder;">Length</h3>
-                                    <h4 style="font-size: 13px;">45 km <br>(with 27 stations)</h4>
+                                    <h4 style="font-size: 13px;">56.7 km <br>(with 35 stations)</h4>
                                 </div>
                             </div>
 
@@ -622,7 +622,8 @@
                                         <i class="fa-solid fa-train-subway"></i>
                                     </div>
                                     <h3 style="font-size: 18px; font-weight: bolder;">Operated By</h3>
-                                    <img class="logo-operator" src="../assets/stl.png" id="ops-smrt" alt="smrt">
+                                    <img class="logo-operator" src="../assets/stl.png" id="ops-smrt" alt="smrt"
+                                        width="150px">
                                 </div>
                             </div>
                         </div>
@@ -640,19 +641,21 @@
 
                 <!-- Line Description Box -->
                 <div class="line-description">
-                    <p>Our extensive MRT system today begun
-                        with only five stations on the North-South Line (NSL) connecting Yio Chu Kang to Toa Payoh in
-                        1987. Though it started small, NSL was the first step in Singapore’s grand vision of an
-                        integrated transport system.
-                        <br><br>
-                        The 27 stations along the 45km line serves a large number of mature residential estates and
-                        takes commuters from Jurong East to Marina South Pier.
-                        <br><br>
-                        Along its route are eight interchanges that connect the NSL to the East-West Line (EWL), Circle
-                        Line
-                        (CCL), Downtown Line (DTL), North East Line (NEL) and Bukit Panjang LRT. <br><br>
-                        (Source: <a class="hyperlink"
-                            href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/north_south_line.html">LTA</a>
+                    <p> Crossing the island from Tuas Link to Pasir Ris, and measuring about 57km, the East-West Line
+                        (EWL) is the longest train line in operation in Singapore. It started as part of the North-South
+                        Line (NSL) and was expanded southwards towards Outram in 1987. <br><br>
+
+                        The ‘original’ line, ending at Boon Lay MRT station, was completed in 1990. Today, the line will
+                        take you from Changi Airport to recreational spots in Pasir Ris or towards the famous food
+                        enclaves of Geylang and Tiong Bahru. A few stops at major interchanges in the city fringe and
+                        Central Business District later, the line heads west through the ‘school district’ of
+                        polytechnics and universities at Dover and Clementi before it heads into the sprawling Jurong
+                        township and Tuas industrial estate. <br><br>
+
+                        In all, there are 35 stations on the EWL, with Jurong East MRT station being one of the busiest
+                        rail interchanges/terminal stations on the EW and NS Lines.<br><br> (Source: <a
+                            class="hyperlink"
+                            href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network/east_west_line.html">LTA</a>
                         )
                     </p>
 
@@ -660,96 +663,95 @@
                 <!-- Line Diagram -->
                 <div class="line-diagram">
                     <div class="line-container">
-                        <!-- NS 1 Jurong East -->
+                        <!-- EW 1 Pasir Ris -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 1</span>
-                                    <span class="interchange-badge mrt-ewl">EW 24</span>
-                                    <!-- <span class="interchange-badge mrt-jrl">JE5</span> -->
+                                    <span class="station-code">EW 1</span>
                                 </div>
-                                <div class="station-name">Jurong East</div>
+                                <div class="station-name">Pasir Ris</div>
                             </div>
                         </div>
 
-                        <!-- NS 2 Bukit Batok -->
+                        <!-- EW 2 Tampines -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 2</span>
+                                    <span class="station-code">EW 2</span>
                                 </div>
-                                <div class="station-name">Bukit Batok</div>
+                                <div class="station-name">Tampines</div>
                             </div>
                         </div>
 
-                        <!-- NS 3 Bukit Gombak -->
+                        <!-- EW 3 Simei -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 3</span>
+                                    <span class="station-code">EW 3</span>
                                 </div>
-                                <div class="station-name">Bukit Gombak</div>
+                                <div class="station-name">Simei</div>
                             </div>
                         </div>
 
-                        <!-- NS 4 Choa Chu Kang -->
+                        <!-- EW 4 Tanah Merah -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 4</span>
-                                    <span class="interchange-badge mrt-bp">BP 1</span>
+                                    <span class="station-code">EW 4</span>
+                                    <span class="interchange-badge mrt-ewl"
+                                        style="border-left: 2px solid #fff;">CG</span>
                                     <!-- <span class="interchange-badge mrt-jrl">JS1</span> -->
                                 </div>
-                                <div class="station-name">Choa Chu Kang</div>
+                                <div class="station-name">Tanah Merah</div>
                             </div>
                         </div>
 
-                        <!-- NS 5 Yew Tee -->
+                        <!-- EW 5 Bedok -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 5</span>
+                                    <span class="station-code">EW 5</span>
                                 </div>
-                                <div class="station-name">Yew Tee</div>
+                                <div class="station-name">Bedok</div>
                             </div>
                         </div>
 
-                        <!-- NS 7 Kranji -->
+                        <!-- EW 6 Kembangan -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 7</span>
+                                    <span class="station-code">EW 6</span>
                                 </div>
-                                <div class="station-name">Kranji</div>
+                                <div class="station-name">Kembangan</div>
                             </div>
                         </div>
 
-                        <!-- NS 8 Marsiling -->
+                        <!-- EW 7 Eunos -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 8</span>
+                                    <span class="station-code">EW 7</span>
                                 </div>
-                                <div class="station-name">Marsiling</div>
+                                <div class="station-name">Eunos</div>
                             </div>
                         </div>
 
-                        <!-- NS 9 Woodlands -->
+                        <!-- EW 8 Paya Lebar -->
                         <div class="station">
                             <div class="station-dot"></div>
                             <div class="station-content">
                                 <div class="station-codes">
-                                    <span class="station-code">NS 9</span>
-                                    <span class="interchange-badge mrt-tel">TE 2</span>
+                                    <span class="station-code">EW 8</span>
+                                    <span class="interchange-badge mrt-ccl" style="color: #000;">CC 9</span>
                                 </div>
-                                <div class="station-name">Woodlands</div>
+                                <div class="station-name">Paya Lebar</div>
                             </div>
                         </div>
                     </div>
