--- a/rail-buddy/networks/nsl.html
+++ b/rail-buddy/networks/nsl.html
@@ -58,18 +58,10 @@
         font-weight: 600;
     }
 
-    body.dark-mode .line-description h3 {
-        color: #fff;
-    }
-
     .line-description p {
         margin: 0 0 12px 0;
         font-size: 14px;
         line-height: 1.6;
-        color: #ccc;
-    }
-
-    body.dark-mode .line-description p {
         color: #ccc;
     }
 
@@ -86,10 +78,6 @@
         margin-bottom: 8px;
     }
 
-    body.dark-mode .line-description li {
-        color: #ccc;
-    }
-
     .line-stat {
         display: flex;
         justify-content: space-between;
@@ -98,36 +86,14 @@
         border-bottom: 1px solid #555;
     }
 
-    body.dark-mode .line-stat {
-        border-bottom-color: #555;
-    }
-
     .line-stat-label {
         font-weight: 500;
-        color: #ccc;
-    }
-
-    body.dark-mode .line-stat-label {
         color: #ccc;
     }
 
     .line-stat-value {
         font-weight: 600;
         color: #fff;
-    }
-
-    body.dark-mode .line-diagram {
-        transition: all 0.5s ease;
-        background-color: #1c1f2b;
-        border: 1px solid #2b2b2b33;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    body.dark-mode .line-description {
-        transition: all 0.5s ease;
-        background-color: #1c1f2b;
-        border: 1px solid #2b2b2b33;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
     #hidden-stations {
@@ -373,7 +339,7 @@
     }
 
     .mrt-nel {
-        background: #8b2e6b;
+        background: #9d27b5;
     }
 
     .mrt-bp {
@@ -391,18 +357,6 @@
     .logo-operator {
         width: 100px;
         margin-top: 10px;
-    }
-
-    body.dark-mode .station-name {
-        color: #fff;
-    }
-
-    body.dark-mode .port-summary {
-        color: #fff;
-        transition: all 0.5s ease;
-        background-color: #1c1f2b;
-        border: 1px solid #2b2b2b33;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
     .details-section {
@@ -424,6 +378,61 @@
         margin: 0;
     }
 
+    body.dark-mode .line-description {
+        flex: 1;
+        padding: 30px 20px;
+        background: #3d4556;
+        border-radius: 12px;
+        margin-bottom: 40px;
+        height: fit-content;
+    }
+
+    body.dark-mode .line-description h3 {
+        color: #fff;
+    }
+
+    body.dark-mode .line-description p {
+        color: #fff;
+    }
+
+    body.dark-mode .line-description li {
+        color: #ccc;
+    }
+
+    body.dark-mode .line-stat {
+        border-bottom-color: #555;
+    }
+
+    body.dark-mode .line-stat-label {
+        color: #ccc;
+    }
+
+    body.dark-mode .line-diagram {
+        transition: all 0.5s ease;
+        background-color: #1c1f2b;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    body.dark-mode .line-description {
+        transition: all 0.5s ease;
+        background-color: #1c1f2b;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    body.dark-mode .station-name {
+        color: #fff;
+    }
+
+    body.dark-mode .port-summary {
+        color: #fff;
+        transition: all 0.5s ease;
+        background-color: #1c1f2b;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
     /* Responsive design */
     @media (max-width: 768px) {
         .line-content-wrapper {
@@ -440,8 +449,8 @@
         }
 
         .details-section {
-            padding-left: 4em;
-            padding-right: 4em;
+            padding-left: 1em;
+            padding-right: 1em;
         }
     }
 </style>
@@ -458,6 +467,10 @@
                 </li>
                 <li class="breadcrumb-item">
                     <a href="../menu.html"><i class="fa-solid fa-bars"></i>
+                    </a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="../our-networks.html"><i class="fa-solid fa-train"></i>
                     </a>
                 </li>
             </ol>
@@ -558,14 +571,18 @@
                                     <a href="menu.html"><i class="fa-solid fa-bars"></i>
                                     </a>
                                 </li>
+                                <li class="breadcrumb-item">
+                                    <a href="../our-networks.html"><i class="fa-solid fa-train"></i>
+                                    </a>
+                                </li>
                             </ol>
                         </nav>
                         <div class="page-title-wrapper">
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="filter-title" id="chimes"><img src="../assets/caplets/NSLCap.png" alt="NSL"
-                                            class="caplet"> North-South Line</h1></a>
+                                    <h1 class="filter-title" id="chimes"><img src="../assets/caplets/NSLCap.png"
+                                            alt="NSL" class="caplet"> North-South Line</h1></a>
                                 </div>
                             </div>
                         </div>
@@ -576,15 +593,15 @@
         </div>
     </section>
 
-            <!-- Audio Elements -->
-        <audio id="chimes-audio">
-          <source src="../assets/chimes/NSL_Chime A_V2.wav" type="audio/wav">
-          Your browser does not support the audio element.
-        </audio>
-        <audio id="chimes-alt">
-          <source src="../assets/chimes/NSL_Chime B_V2.wav" type="audio/wav">
-          Your browser does not support the audio element.
-        </audio>
+    <!-- Audio Elements -->
+    <audio id="chimes-audio">
+        <source src="../assets/chimes/NSL_Chime A_V2.wav" type="audio/wav">
+        Your browser does not support the audio element.
+    </audio>
+    <audio id="chimes-alt">
+        <source src="../assets/chimes/NSL_Chime B_V2.wav" type="audio/wav">
+        Your browser does not support the audio element.
+    </audio>
 
     <!-- Details/Contents Section -->
     <section class="about-me-summ clearfix">
