--- a/rail-buddy/networks/nsl.html
+++ b/rail-buddy/networks/nsl.html
@@ -236,7 +236,7 @@
         font-weight: bold;
         border-radius: 13.6px / 19.2px;
         padding: 5px 10px;
-        font-size: 13px;
+        font-size: 11px;
         letter-spacing: 1px;
         margin-right: 0px;
         border: 2px solid #fff;
@@ -250,7 +250,7 @@
     }
 
     .interchange-badge {
-        font-size: 13px;
+        font-size: 11px;
         font-weight: bold;
         padding: 5px 10px;
         border-radius: 0;
@@ -259,6 +259,7 @@
         letter-spacing: 1px;
         border: 2px solid #fff;
         border-left: none;
+        cursor: default;
     }
 
     /* Last interchange badge gets rounded right side */
@@ -342,7 +343,7 @@
         background: #9d27b5;
     }
 
-    .mrt-bp {
+    .mrt-lrt {
         background: #708270;
     }
 
