--- a/rail-buddy/networks/bp.html
+++ b/rail-buddy/networks/bp.html
@@ -615,7 +615,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
+                                    <a href="../menu.html"><i class="fa-solid fa-bars"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
