--- a/rail-buddy/networks/ewl.html
+++ b/rail-buddy/networks/ewl.html
@@ -610,7 +610,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
+                                    <a href="../menu.html"><i class="fa-solid fa-bars"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
