--- a/rail-buddy/networks/nsl.html
+++ b/rail-buddy/networks/nsl.html
@@ -569,7 +569,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
+                                    <a href="../menu.html"><i class="fa-solid fa-bars"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
@@ -719,7 +719,7 @@
                             <div class="station-content">
                                 <div class="station-codes">
                                     <span class="station-code">NS 4</span>
-                                    <span class="interchange-badge mrt-bp">BP 1</span>
+                                    <span class="interchange-badge mrt-lrt">BP 1</span>
                                     <!-- <span class="interchange-badge mrt-jrl">JS1</span> -->
                                 </div>
                                 <div class="station-name">Choa Chu Kang</div>
