2026-02 Feature Update for worksbynrfz

--- a/rail-buddy/settings.html
+++ b/rail-buddy/settings.html
@@ -284,6 +284,8 @@
 
     <script src="../js/utils.js"></script>
 
+    <script src="../js/notificationManager.js"></script>
+
     <script src="js/settings.js"></script>
 
 </body>
