--- a/rail-buddy/system-map.html
+++ b/rail-buddy/system-map.html
@@ -215,6 +215,8 @@
 
     <script src="../js/utils.js"></script>
 
+    <script src="../js/notificationManager.js"></script>
+
     <script src="js/menu.js"></script>
 
     <script src="js/sysMap.js"></script>
