--- a/rail-buddy/history.html
+++ b/rail-buddy/history.html
@@ -651,6 +651,8 @@
 
     <script src="../js/utils.js"></script>
 
+    <script src="../js/notificationManager.js"></script>
+
     <script src="js/hist.js"></script>
 
 </body>
