--- a/rail-buddy/our-networks.html
+++ b/rail-buddy/our-networks.html
@@ -421,6 +421,8 @@
 
     <script src="../js/default-assets/active.js"></script>
 
+    <script src="../js/notificationManager.js"></script>
+
 </body>
 
 </html>
