--- a/rail-buddy/statistics.html
+++ b/rail-buddy/statistics.html
@@ -334,6 +334,8 @@
     <script src="../js/dstabs.js"></script>
 
     <script src="../js/utils.js"></script>
+
+    <script src="../js/notificationManager.js"></script>
     
     <script src="js/hist.js"></script>
 
