--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -359,7 +359,7 @@
             <hr>
 
             <div style="text-align: center; color: gray; font-size: 14px; margin-top: 1em; margin-bottom: 2em;">
-                Version 3.1.9-DEV (2201)
+                Version 3.1.10 (2054)
             </div>
     </section>
 
