2026-03 Feature Update for worksbynrfz

--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <script>if(localStorage.getItem('dark-mode')==='enabled'){document.documentElement.classList.add('dark-mode');document.documentElement.style.background='#121521';}</script>
+    <script>if (localStorage.getItem('dark-mode') === 'enabled') { document.documentElement.classList.add('dark-mode'); document.documentElement.style.background = '#121521'; }</script>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -318,6 +318,15 @@
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-regular fa-external-link"></i> Fare Calculator</h5>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="first-last.html"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-menu"><i class="fa-regular fa-clock"></i> First & Last Bus Timings</h5>
                         </div>
                     </div>
                 </a>
