--- a/buszy/first-last.html
+++ b/buszy/first-last.html
@@ -669,7 +669,7 @@
       </div>
     </section>
 
-    <footer style="padding-top: 1em">
+    <footer style="padding-top: 2em; padding-bottom: 2em">
       <p style="text-align: center">
         Timings are provided by
         <a class="hyperlink" href="https://businterchange.net/" target="_blank"
