2026-03 Feature Update for worksbynrfz

--- a/buszy/first-last.html
+++ b/buszy/first-last.html
@@ -18,7 +18,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>First & Last Bus | BuSzy</title>
+    <title>First & Last Bus | Buszy</title>
     <meta content name="description" />
     <meta content name="keywords" />
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -661,9 +661,9 @@
 
         <div class="content-section" id="contentSection">
           <div class="bus-stop-title" id="busStopTitle">--</div>
-          <!-- <div class="bus-stop-subtitle" id="busStopSubtitle">
+          <div class="bus-stop-subtitle" id="busStopSubtitle">
             Select a bus stop to begin
-          </div> -->
+          </div>
           <div id="servicesContainer" class="services-grid"></div>
         </div>
       </div>
